tests/detectors/backdoor/0.7.6/output.txt
Compilation warnings/errors on badger_strat.sol:
Warning: SPDX license identifier not provided in source file. Before publishing, consider adding a comment containing "SPDX-License-Identifier: <SPDX-License>" to each source file. Use "SPDX-License-Identifier: UNLICENSED" for non-open-source code. Please see https://spdx.org for more information.
--> node_modules/@openzeppelin/contracts/math/SafeMath.sol

Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
  --> badger_strat.sol:80:9:
   |
80 |         address _governance,
   |         ^^^^^^^^^^^^^^^^^^^

Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
  --> badger_strat.sol:81:9:
   |
81 |         address _strategist,
   |         ^^^^^^^^^^^^^^^^^^^

Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
  --> badger_strat.sol:82:9:
   |
82 |         address _controller,
   |         ^^^^^^^^^^^^^^^^^^^

Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
  --> badger_strat.sol:83:9:
   |
83 |         address _keeper,
   |         ^^^^^^^^^^^^^^^

Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
  --> badger_strat.sol:84:9:
   |
84 |         address _guardian,
   |         ^^^^^^^^^^^^^^^^^

Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
   --> badger_strat.sol:226:28:
    |
226 |     function setKeepReward(uint256 _setKeepReward) external {
    |                            ^^^^^^^^^^^^^^^^^^^^^^

Warning: Unused local variable.
   --> badger_strat.sol:325:10:
    |
325 |         (uint256 governancePerformanceFee, uint256 strategistPerformanceFee) =
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Warning: Unused local variable.
   --> badger_strat.sol:325:44:
    |
325 |         (uint256 governancePerformanceFee, uint256 strategistPerformanceFee) =
    |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Warning: Unused function parameter. Remove or comment out the variable name to silence this warning.
   --> badger_strat.sol:423:57:
    |
423 |     function reinvest() external whenNotPaused returns (uint256 reinvested) {
    |                                                         ^^^^^^^^^^^^^^^^^^

Warning: Unused local variable.
   --> badger_strat.sol:496:9:
    |
496 |         uint256 toWantRatio =
    |         ^^^^^^^^^^^^^^^^^^^

Warning: Function state mutability can be restricted to pure
   --> badger_strat.sol:205:5:
    |
205 |     function isTendable() public view returns (bool) {
    |     ^ (Relevant source part starts here and spans across multiple lines).

Warning: Function state mutability can be restricted to view
   --> badger_strat.sol:233:5:
    |
233 |     function _onlyNotProtectedTokens(address _asset) internal {
    |     ^ (Relevant source part starts here and spans across multiple lines).

Warning: Function state mutability can be restricted to view
   --> badger_strat.sol:272:5:
    |
272 |     function _withdrawAll() internal {
    |     ^ (Relevant source part starts here and spans across multiple lines).

Warning: Function state mutability can be restricted to view
   --> badger_strat.sol:285:5:
    |
285 |     function _withdrawSome(uint256 _amount)
    |     ^ (Relevant source part starts here and spans across multiple lines).


[92m
 typecheck error: Var name: TMP_29 Func name: balanceOfPool
 typecheck error: Var name: TMP_75 Func name: _withdrawSome
 typecheck error: Var name: TMP_79 Func name: _withdrawSome
 typecheck error: Var name: TMP_99 Func name: harvest
 typecheck error: Var name: toSwap Func name: _swapcvxCRVToWant
 typecheck error: Var name: toDeposit Func name: _swapcvxCRVToWant
 typecheck error: Var name: TMP_176 Func name: manualRebalance
 typecheck error: Var name: TMP_182 Func name: manualRebalance
Reference: Initialized i guess?[0m
badger_strat.sol analyzed (8 contracts with 1 detectors), 8 result(s) found
